Plant_Add/Edit Testing - API(Admin)